<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#eee"
    >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/with_gray_underline_pressed_gray"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingRight="50dp"
        android:paddingEnd="50dp"
        >
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="16sp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/user_setting_age_text"
            android:text="@string/age"
            />
        <EditText
            android:id="@+id/user_setting_age_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/user_setting_age_text"
            android:layout_toEndOf="@+id/user_setting_age_text"
            android:textColor="#000"
            android:textSize="16sp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:layout_centerVertical="true"
            android:maxLength="3"
            android:inputType="number"
            android:background="#00000000"
            android:hint="@string/change_age"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/with_gray_underline_pressed_gray"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingRight="50dp"
        android:paddingEnd="50dp"
        >
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="16sp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/user_setting_sex_text"
            android:text="@string/sex"
            />
        <EditText
            android:id="@+id/user_setting_sex_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/user_setting_sex_text"
            android:layout_toEndOf="@+id/user_setting_sex_text"
            android:textColor="#000"
            android:textSize="16sp"
            android:maxLength="1"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:layout_centerVertical="true"
            android:background="#00000000"
            android:hint="@string/change_sex"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/with_gray_underline_pressed_gray"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingRight="50dp"
        android:paddingEnd="50dp"
        >
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="16sp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/user_setting_area_text"
            android:text="@string/area"
            />
        <EditText
            android:id="@+id/user_setting_area_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/user_setting_area_text"
            android:layout_toEndOf="@+id/user_setting_area_text"
            android:textColor="#000"
            android:textSize="16sp"
            android:maxLength="10"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:layout_centerVertical="true"
            android:background="#00000000"
            android:hint="@string/change_area"
            />
    </RelativeLayout>
    <ImageView
        android:contentDescription="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="#00000000"
        />
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/with_gray_underline_pressed_gray"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingRight="50dp"
        android:paddingEnd="50dp"
        >
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="16sp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/user_setting_sign_text"
            android:text="@string/sign"
            />
        <EditText
            android:id="@+id/user_setting_sign_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/user_setting_sign_text"
            android:layout_toEndOf="@+id/user_setting_sign_text"
            android:textColor="#000"
            android:textSize="16sp"
            android:maxLength="50"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:layout_centerVertical="true"
            android:background="#00000000"
            android:hint="@string/change_sign"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00000000"
        >
        <TextView
            android:id="@+id/user_setting_submit"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_alignParentBottom="true"
            android:textSize="18sp"
            android:textColor="#fff"
            android:text="@string/submit"
            android:background="@drawable/blue_button"
            />
    </RelativeLayout>


</LinearLayout>
