<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="190dp"
    android:orientation="vertical"
    android:background="#ffffff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/sound_record_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/source_record_return" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sound_timing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/click_to_record" />

            <ImageView
                android:id="@+id/sound_click"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/click_to_record" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linear_layout_record"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:visibility="gone">
        <TextView
            android:id="@+id/sound_record_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center_horizontal"
            android:text="@string/source_record_cancel"/>
        <TextView
            android:id="@+id/sound_record_send"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center_horizontal"
            android:text="@string/source_record_send"/>
    </LinearLayout>

</LinearLayout>