<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:layout_alignParentBottom="true"
    android:orientation="vertical"
    >
    <ImageView
        android:contentDescription="@string/app_name"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#ddd"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:paddingTop="2dp"
        android:paddingBottom="5dp"
        android:background="#fff"
        >
        <LinearLayout
            android:id="@+id/footer_message"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            >
            <ImageView
                android:id="@+id/footer_message_img"
                android:contentDescription="@string/app_name"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/message_pressed"
                android:scaleType="centerInside"
                />
            <TextView
                android:id="@+id/footer_message_text"
                android:layout_width="wrap_content"
                android:layout_height="12sp"
                android:textColor="#09f"
                android:textSize="12sp"
                android:text="@string/message"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/footer_linkman"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            >
            <ImageView
                android:id="@+id/footer_linkman_img"
                android:contentDescription="@string/app_name"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/linkman_normal"
                android:scaleType="centerInside"
                />
            <TextView
                android:id="@+id/footer_linkman_text"
                android:layout_width="wrap_content"
                android:layout_height="12sp"
                android:textColor="#999"
                android:textSize="12sp"
                android:text="@string/linkman"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/footer_user"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            >
            <ImageView
                android:id="@+id/footer_user_img"
                android:contentDescription="@string/app_name"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/user_normal"
                android:scaleType="centerInside"
                />
            <TextView
                android:id="@+id/footer_user_text"
                android:layout_width="wrap_content"
                android:layout_height="12sp"
                android:textColor="#999"
                android:textSize="12sp"
                android:text="@string/user"
                />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>
