<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#fff"
        >
        <ImageView
            android:contentDescription="@string/app_name"
            android:id="@+id/addfriends_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:src="@drawable/arrow_left"
            android:background="@drawable/pressed_gray_roundborder"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/addfriends_search"
            android:layout_toLeftOf="@+id/addfriends_search"
            android:layout_toEndOf="@+id/addfriends_back"
            android:layout_toRightOf="@+id/addfriends_back"
            android:background="@drawable/round_boder_gray_01"
            >
            <ImageView
                android:id="@+id/addfriends_find_logo"
                android:contentDescription="@string/app_name"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_width="40dp"
                android:layout_height="15dp"
                android:src="@drawable/find_logo"
                />
            <EditText
                android:id="@+id/addfriends_input"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_toLeftOf="@+id/addfriends_clear"
                android:layout_toStartOf="@+id/addfriends_clear"
                android:layout_toEndOf="@+id/addfriends_find_logo"
                android:layout_toRightOf="@+id/addfriends_find_logo"
                android:maxLength="64"
                android:textSize="12sp"
                android:layout_centerVertical="true"
                android:hint="@string/input_search_setext"
                android:textColorHint="#aaa"
                android:background="#00000000"
                android:lines="1"
                />
            <ImageView
                android:id="@+id/addfriends_clear"
                android:contentDescription="@string/app_name"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:src="@drawable/clear"
                />
        </RelativeLayout>
        <TextView
            android:id="@+id/addfriends_search"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textColor="#09f"
            android:textSize="14sp"
            android:text="@string/search"
            android:background="@drawable/pressed_gray_roundborder"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:background="@drawable/with_gray_underline"
        >
        <TextView
            android:id="@+id/addfriends_people"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:textColor="#999"
            android:textSize="14sp"
            android:text="@string/people"
            android:background="@drawable/pressed_gray"
            />
        <TextView
            android:id="@+id/addfriends_group"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:textColor="#999"
            android:textSize="14sp"
            android:text="@string/group"
            android:background="@drawable/pressed_gray"
            />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/addfriend_framelist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    </FrameLayout>

</LinearLayout>
