<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/show_people_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#eee"
    >

    <RelativeLayout
        android:id="@+id/user_info"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="#fff"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        >
        <ImageView
            android:contentDescription="@string/app_name"
            android:id="@+id/show_user_portrait"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/show_user_portrait"
            android:layout_toEndOf="@+id/show_user_portrait"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/show_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:lines="1"
                android:ellipsize="end"
                android:textSize="20sp"
                android:textColor="#111"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:id="@+id/show_user_age"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:lines="1"
                    android:paddingRight="3dp"
                    android:paddingEnd="3dp"
                    android:paddingLeft="1dp"
                    android:paddingStart="1dp"
                    android:maxLength="3"
                    android:minWidth="20dp"
                    android:textSize="12sp"
                    android:textColor="#fff"
                    android:text="@string/boysign"
                    android:gravity="center"
                    android:background="@drawable/round_border_blue_01"
                    android:layout_marginEnd="7dp"
                    android:layout_marginRight="7dp"
                    />
                <TextView
                    android:id="@+id/show_user_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:ellipsize="end"
                    android:textSize="14sp"
                    android:textColor="#777"
                    />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/user_info"
        android:background="#fff"
        >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:lines="1"
            android:ellipsize="end"
            android:textSize="14sp"
            android:textColor="#777"
            android:text="@string/signature"
            android:background="@drawable/with_gray_underline"
            />
        <TextView
            android:id="@+id/show_user_signature"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:ellipsize="end"
            android:textSize="14sp"
            android:textColor="#777"
            android:textScaleX="1"
            android:maxLength="52"
            android:lineSpacingExtra="1dp"
            android:background="@drawable/with_gray_underline"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/show_user_require"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="#000"
            android:text="@string/require_add_friend"
            android:background="@drawable/white_button"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            />
        <TextView
            android:id="@+id/show_user_send_message"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="#fff"
            android:text="@string/send_message"
            android:background="@drawable/blue_button"
            />

    </LinearLayout>

</RelativeLayout>
